--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
-          github_token: ${{ secrets.TERARRIUM_TOKEN }}
+          token: ${{ secrets.TERARRIUM_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with: 
